feat: add detailed Javadoc comments for all files